# StelForge

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_mac.sh
src/: CMakeLists.txt
src/assetsModule/: Asset.h  AssetsManager.cpp  AssetsManager.h  MeshMaterialsRegistry.cpp  MeshMaterialsRegistry.h  RenderMeshData.cpp  RenderMeshData.h  TextureHandler.cpp  TextureHandler.h
src/assetsModule/modelModule/: Animation.cpp  Animation.h  Armature.cpp  Armature.h  Bone.cpp  Bone.h  BoneAnimationKeys.cpp  BoneAnimationKeys.h  BoundingVolume.cpp  BoundingVolume.h  Material.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  MeshUtils.cpp  MeshUtils.h  MeshVaoRegistry.cpp  MeshVaoRegistry.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  Vertex.h
src/assetsModule/shaderModule/: GeometryShader.cpp  GeometryShader.h  Shader.cpp  Shader.h  ShaderBase.cpp  ShaderBase.h  ShaderController.cpp  ShaderController.h
src/componentsModule/: ActionComponent.cpp  ActionComponent.h  ArmatureComponent.cpp  ArmatureComponent.h  CameraComponent.cpp  CameraComponent.h  CascadeShadowComponent.cpp  CascadeShadowComponent.h  Component.cpp  ComponentBase.h  ComponentHolder.cpp  ComponentHolder.h  DebugDataComponent.cpp  DebugDataComponent.h  DrawComponent.cpp  DrawComponent.h  FrustumComponent.cpp  FrustumComponent.h  GizmoComponent.h  IsDrawableComponent.cpp  IsDrawableComponent.h  LightComponent.cpp  LightComponent.h  LightSourceComponent.cpp  LightSourceComponent.h  LodComponent.cpp  LodComponent.h  MaterialComponent.cpp  MaterialComponent.h  MeshComponent.cpp  MeshComponent.h  ModelComponent.cpp  ModelComponent.h  NodeComponent.cpp  NodeComponent.h  OcTreeComponent.cpp  OcTreeComponent.h  OcclusionComponent.h  OutlineComponent.cpp  OutlineComponent.h  (+14 more)
src/containersModule/: OcTree.h  SparseSet.h  Tree.h  Unique.cpp  Unique.h  Vector.h
src/core/: BoundingVolume.cpp  BoundingVolume.h  Camera.cpp  Camera.h  Component.h  ComponentHolder.h  Core.cpp  Core.h  ECSHandler.cpp  ECSHandler.h  Engine.cpp  Engine.h  FileSystem.cpp  FileSystem.h  IndexBuffer.cpp  IndexBuffer.h  InputHandler.cpp  InputHandler.h  LoadingWindow.cpp  LoadingWindow.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  Node.cpp  Node.h  OcTree.h  Projection.cpp  Projection.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneFloor.cpp  SceneFloor.h  ScreenDrawData.cpp  (+21 more)
src/debugModule/: Benchmark.cpp  Benchmark.h  ComponentsDebug.cpp  ComponentsDebug.h  DebugInfo.cpp  DebugInfo.h  DebugMenu.cpp  DebugMenu.h  ShadersDebug.cpp  ShadersDebug.h  imguiDecorator.cpp  imguiDecorator.h
src/ecsModule/: ComponentBase.cpp  ComponentBase.h  ComponentsManager.cpp  ComponentsManager.h  Container.cpp  Container.h  ECSHandler.cpp  ECSHandler.h  EntityBase.cpp  EntityBase.h  EntityComponentSystem.cpp  EntityComponentSystem.h  EntityManager.cpp  EntityManager.h  SystemBase.cpp  SystemBase.h  SystemInterface.cpp  SystemInterface.h  SystemManager.cpp  SystemManager.h  Types.h  helper.h
src/ecsModule/base/: ComponentBase.h  EntityBase.h  SystemBase.h
src/ecsModule/memory/: Allocators.cpp  Allocators.h  ComponentsArray.cpp  ComponentsArray.h  ComponentsArraySector.cpp  ComponentsArraySector.h  ComponentsArrayUtils.cpp  ComponentsArrayUtils.h  ECSMemoryStack.cpp  ECSMemoryStack.h  settings.h
src/ecss/: EntityHandle.h  Registry.cpp  Registry.h  Types.h  contiguousMap.h
src/ecss/base/: ComponentBase.h  EntityHandle.h
src/ecss/memory/: BinarySearch.h  ComponentsArray.cpp  ComponentsArray.h  ComponentsArraySector.cpp  Reflection.h  (+6 more)
src/entitiesModule/: ModelEntity.cpp  ModelEntity.h  Object.cpp  Object.h
src/entityModule/: Entity.cpp  Entity.h
src/glWrapper/: Blend.h  BlendStack.h  Buffer.cpp  Buffer.h  CapabilitiesStack.h  Capability.h  Depth.h  Draw.h  Framebuffer.cpp  Framebuffer.h  Query.h  Renderbuffer.h  Shader.h  StateStack.h  Texture.h  VertexArray.h  ViewportStack.h
src/logsModule/: logger.cpp  logger.h
src/mathModule/: CameraUtils.cpp  CameraUtils.h  Forward.h  ImGuiHelpers.cpp  ImGuiHelpers.h  MathUtils.h  Matrix.h  MatrixOperations.h  MatrixOperators.h  Projection.cpp  Projection.h  Quaternion.h  Utils.h  Vector.h  VectorOperations.h  VectorOperators.h
src/memoryModule/: Allocator.cpp  Allocator.h  Allocators.cpp  Allocators.h  ECSMemoryStack.cpp  ECSMemoryStack.h  GlobalMemoryUser.cpp  GlobalMemoryUser.h  LinearAllocator.cpp  LinearAllocator.h  MemoryChunkAllocator.cpp  MemoryChunkAllocator.h  MemoryManager.cpp  MemoryManager.h  PoolAllocator.cpp  PoolAllocator.h  StackAllocator.cpp  StackAllocator.h
src/modelModule/: Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  Model.cpp  Model.h
src/multithreading/: ThreadPool.cpp  ThreadPool.h
src/nodeModule/: Node.cpp  Node.h  TreeNode.h
src/propertiesModule/: ComponentNames.h  PropertiesSystem.cpp  PropertiesSystem.h  Serializable.cpp  Serializable.h  TypeName.h
src/renderModule/: Batcher.cpp  Batcher.h  BlendStack.h  Buffer.cpp  Buffer.h  CapabilitiesStack.cpp  CapabilitiesStack.h  CascadeShadows.cpp  CascadeShadows.h  DirectionalLight.cpp  DirectionalLight.h  DirectionalOrthoLight.cpp  DirectionalOrthoLight.h  EVSMShadow.cpp  EVSMShadow.h  Framebuffer.cpp  Framebuffer.h  Gizmo.cpp  Gizmo.h  Light.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  SceneGridFloor.cpp  SceneGridFloor.h  Skybox.cpp  Skybox.h  TextRenderer.cpp  TextRenderer.h  TextureHandler.cpp  TextureHandler.h  Utils.cpp  Utils.h  VertexArray.cpp  VertexArray.h  glUtils.cpp  glUtils.h
src/shaderModule/: GeometryShader.cpp  GeometryShader.h  Shader.cpp  Shader.h  ShaderBase.cpp  ShaderBase.h  ShaderController.cpp  ShaderController.h
src/systemsModule/: CameraSystem.cpp  CameraSystem.h  DrawSystem.cpp  DrawSystem.h  LODSystem.cpp  LODSystem.h  RenderSystem.cpp  RenderSystem.h  ShaderSystem.cpp  ShaderSystem.h  SystemBase.h  SystemManager.cpp  SystemManager.h  SystemsPriority.h  TasksManager.cpp  TasksManager.h  TransformSystem.cpp  TransformSystem.h
src/windowsModule/: ViewportData.h  Window.cpp  Window.h
(+64 files in other folders)
